unpackaged/main/default/objects/OpportunityLineItem/fields/ADP_Target__c.field-meta.xml
<CustomField>
    <fullName>ADP_Target__c</fullName>
    <description>anticipated win total</description>
    <inlineHelpText>anticipated win total</inlineHelpText>
    <label>Product ADP Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>