unpackaged/main/default/objects/OpportunityLineItem/fields/GBMS_Orderline_ID__c.field-meta.xml
<CustomField>
    <fullName>GBMS_Orderline_ID__c</fullName>
    <externalId>true</externalId>
    <label>GBMS_Orderline_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>