unpackaged/main/default/objects/OpportunityLineItem/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <formula>PricebookEntry.Product2.Inventory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory</label>
    <type>Checkbox</type>
</CustomField>