unpackaged/main/default/objects/OpportunityLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>To hold the actual margin of the product after costs for EMEA</description>
    <inlineHelpText>Please enter the actual margin value for this service</inlineHelpText>
    <label>Actual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>