unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Products_Public__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products_Public__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Products Public</label>
    <referenceTo>Opportunity_Products_Public__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>