unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Actual_Margin_percentage__c.field-meta.xml
<CustomField>
    <fullName>Product_Actual_Margin_percentage__c</fullName>
    <description>= Product Actual Margin / GES Sales Price *100</description>
    <formula>Product_Actual_Margin__c  / UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>= Product Actual Margin / GES Sales Price *100</inlineHelpText>
    <label>Product Actual Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>