unpackaged/main/default/objects/OpportunityLineItem/fields/Product_AM_Forecast_Margin_per__c.field-meta.xml
<CustomField>
    <fullName>Product_AM_Forecast_Margin_per__c</fullName>
    <description>Product_AM_Forecast_Margin__c / Product_AM_Forecast_Price__c</description>
    <formula>Product_AM_Forecast_Margin__c  /  Product_AM_Forecast_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product_AM_Forecast_Margin__c / Product_AM_Forecast_Price__c</inlineHelpText>
    <label>Product AM Forecast Margin%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>