unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Forecast_Margin_percentage__c.field-meta.xml
<CustomField>
    <fullName>Product_Forecast_Margin_percentage__c</fullName>
    <description>Product Plan Sales Margin /Product Plan Sales Price *100</description>
    <formula>Product_Forecast_Sales_Margin__c  /  Product_Forecast_Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Plan Sales Margin /Product Plan Sales Price *100</inlineHelpText>
    <label>Product Forecast Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>