unpackaged/main/default/objects/OpportunityLineItem/fields/Sendable__c.field-meta.xml
<CustomField>
    <fullName>Sendable__c</fullName>
    <formula>PricebookEntry.Product2.Sendable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sendable</label>
    <type>Checkbox</type>
</CustomField>